--- a/pub/index.html
+++ b/pub/index.html
@@ -1,12 +1,10 @@
-<!-- index.html -->
+
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>wasm app</title>
+  <title>wasm-render</title>
 </head>
 <body>
-  <!-- <script src="wasm/loadWasm.js" type="text/javascript"></script>
-  <script src="index.js" type="text/javascript"></script> -->
   <script src="./main.build.js"></script>
 </body>
 </html>
