`Matrix.ts` oh. my. days. Spent over half the weekend and most of Monday getting the 3d transformation stuff working properly. Tested sanity, patience and my resolve to the maximum. Finally all working cleanly, please god promise me I never have to write all of that again

--- a/pub/index.html
+++ b/pub/index.html
@@ -6,5 +6,30 @@
 </head>
 <body>
   <script src="./main.build.js"></script>
+  <!--
+  <textarea id="ta"></textarea>
+
+  <script src="./three.min.js"></script>
+  <script>
+  var box = new THREE.CubeGeometry(1,1,1);
+
+  let ta = document.getElementById("ta");
+  for (var t=0; t<box.vertices.length;t++)
+  {
+    let v = box.vertices[t];
+    console.log(v.x, v.y, v.z)
+    ta.innerHTML += "["+v.x+","+v.y+","+v.z+"],\n";
+  }
+
+  ta.innerHTML +="\n\n";
+
+  for (var t=0; t<box.faces.length; t++)
+  {
+    let f = box.faces[t];
+    ta.innerHTML += "["+f.a+","+f.b+","+f.c+"],\n";
+
+  }
+
+  </script> -->
 </body>
 </html>
