Abandon plans for goraud shading (calc'ing vertex norms requires refactoring a lot, not worth it). Engine pretty much feature complete now.

--- a/pub/index.html
+++ b/pub/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>wasm-render</title>
+  <style type="text/css">
+  body {
+    background-color: black;
+  }
+  </style>
 </head>
 <body>
   <script src="./main.build.js"></script>
