err, remove WASM support test code

--- a/pub/index.html
+++ b/pub/index.html
@@ -90,7 +90,7 @@
 
   <script>
 
-  if (!('WebAssembly2' in window))
+  if (!('WebAssembly' in window))
   {
     var e = document.getElementById('output');
     var n = document.getElementById('nosupport').style.display = 'block';
