--- a/pub/index.html
+++ b/pub/index.html
@@ -6,7 +6,7 @@
   <style type="text/css">
   body {
     background-color: black;
-    font-family: Sans-serif;
+    font-family: Arial;
   }
   #output
   {
@@ -64,6 +64,10 @@
       <p>
         This is the result of an exploration of WebAssembly technology, how it performs and how
         it might integrate into the existing Javascript development process.
+      </p>
+      <p>
+        Just to be clear, <i>everything</i> required to produce this output is in software only (I know, cos I wrote it all). So, no hardware, libraries, imports,
+        external APIs etc. One exception: the stats graph, originally written by <a href="https://github.com/mrdoob/stats.js/">mrdoob</a>, modified by me.
       </p>
       <p>
         I thought a proper work-out 💪 test of the performance would be to write a
