html notes, set doctype

--- a/pub/index.html
+++ b/pub/index.html
@@ -1,4 +1,13 @@
 
+<!--
+
+  Note the html here directly handles the detection of WebAssembly
+  and loading of the application script if it's available
+  Otherwise displays an error
+
+-->
+
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
